Company API model refactored
