# server/src/main/java/com/cezarykluczynski/stapi/server/company/reader/CompanySoapReader.java
@@ -1,17 +1,21 @@
 package com.cezarykluczynski.stapi.server.company.reader;
 
-import com.cezarykluczynski.stapi.client.v1.soap.CompanyRequest;
-import com.cezarykluczynski.stapi.client.v1.soap.CompanyResponse;
+import com.cezarykluczynski.stapi.client.v1.soap.CompanyBaseRequest;
+import com.cezarykluczynski.stapi.client.v1.soap.CompanyBaseResponse;
+import com.cezarykluczynski.stapi.client.v1.soap.CompanyFullRequest;
+import com.cezarykluczynski.stapi.client.v1.soap.CompanyFullResponse;
 import com.cezarykluczynski.stapi.model.company.entity.Company;
 import com.cezarykluczynski.stapi.server.common.mapper.PageMapper;
 import com.cezarykluczynski.stapi.server.common.reader.BaseReader;
+import com.cezarykluczynski.stapi.server.common.reader.FullReader;
 import com.cezarykluczynski.stapi.server.company.mapper.CompanySoapMapper;
 import com.cezarykluczynski.stapi.server.company.query.CompanySoapQuery;
+import com.google.common.collect.Iterables;
 import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 
 @Service
-public class CompanySoapReader implements BaseReader<CompanyRequest, CompanyResponse> {
+public class CompanySoapReader implements BaseReader<CompanyBaseRequest, CompanyBaseResponse>, FullReader<CompanyFullRequest, CompanyFullResponse> {
 
 	private CompanySoapQuery companySoapQuery;
 
@@ -26,12 +30,19 @@ public class CompanySoapReader implements BaseReader<CompanyRequest, CompanyResp
 	}
 
 	@Override
-	public CompanyResponse readBase(CompanyRequest input) {
+	public CompanyBaseResponse readBase(CompanyBaseRequest input) {
 		Page<Company> companyPage = companySoapQuery.query(input);
-		CompanyResponse companyResponse = new CompanyResponse();
+		CompanyBaseResponse companyResponse = new CompanyBaseResponse();
 		companyResponse.setPage(pageMapper.fromPageToSoapResponsePage(companyPage));
-		companyResponse.getCompanies().addAll(companySoapMapper.map(companyPage.getContent()));
+		companyResponse.getCompanies().addAll(companySoapMapper.mapBase(companyPage.getContent()));
 		return companyResponse;
 	}
 
+	@Override
+	public CompanyFullResponse readFull(CompanyFullRequest input) {
+		Page<Company> companyPage = companySoapQuery.query(input);
+		CompanyFullResponse companyFullResponse = new CompanyFullResponse();
+		companyFullResponse.setCompany(companySoapMapper.mapFull(Iterables.getOnlyElement(companyPage.getContent(), null)));
+		return companyFullResponse;
+	}
 }
